Ajout d'avatars avec une fonction et un form pour ajouter à une liste

--- a/index.html
+++ b/index.html
@@ -3,9 +3,37 @@
   <head>
     <meta charset="utf-8">
     <title>projectvue</title>
+    <style>
+      .red{
+        background-color: rosybrown;
+      }
+    </style>
   </head>
   <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <div id="app">
+      <input type="text" v-model="uneAutreVar">
+      <button v-on:click="addToList">Ajouter</button>
+      <h1 v-if="on">
+        {{ message }}
+      </h1>
+
+      <h1 v-show="on">
+        {{ uneAutreVar }}
+      </h1>
+
+      <ul>
+        <li v-for="(person, index) in maList"
+          v-bind:style="{color: person.color}"
+          v-bind:class="{red: index === 1}">
+          #{{ index + 1 }} {{ person.name }}
+
+          <img v-bind:src="person | toAvatars">
+        </li>
+      </ul>
+
+      
+
+    </div>
+
   </body>
 </html>
